# v-umlaut

./: CMakeLists.txt  LICENSE  README.md  SceneData.h  Solver.cpp  Solver.h  SyntheticData.cpp  SyntheticData.h  Utils.cpp  Utils.h  main.cpp
derivation/: v_umlaut.m2
